All NuGet dependencies are now at latest

--- a/money/appsettings.Development.json
+++ b/money/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-    "ConnectionString": "Server=localhost;Database=money;Trusted_Connection=yes;",
+    "ConnectionString": "Server=localhost;Database=money;Trusted_Connection=yes;TrustServerCertificate=true;",
     "Logging": {
         "LogLevel": {
             "Default": "Debug",
