--- a/money/money.csproj
+++ b/money/money.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Content Remove="package.json" />
         <Content Remove="package-lock.json" />
     </ItemGroup>
 
