Solution now builds against net8.0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "explorer.excludeGitIgnore": true
+    "explorer.excludeGitIgnore": true,
+    "dotnet.backgroundAnalysis.analyzerDiagnosticsScope": "fullSolution"
 }
