--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,7 @@
             "type": "process",
             "args": [
                 "build",
+                "--no-incremental",
                 "${workspaceFolder}/money/money.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
