--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
-    "explorer.excludeGitIgnore": true,
-    "dotnet.backgroundAnalysis.analyzerDiagnosticsScope": "fullSolution"
+    "dotnet.backgroundAnalysis.analyzerDiagnosticsScope": "fullSolution",
+    "files.exclude": {
+        "**/bin/": true,
+        "**/node_modules/": true,
+        "**/obj/": true
+    }
 }
