--- a/money/appsettings.json
+++ b/money/appsettings.json
@@ -4,7 +4,9 @@
     "PersistentSessionLengthInDays": 90,
     "Logging": {
         "LogLevel": {
-            "Default": "Error"
+            "Default": "Error",
+            "System": "Information",
+            "Microsoft": "Information"
         }
     }
 }
